# Bc-assist

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  rust-tests.yml
benches/: trajectory.rs
docs/: project-plan.md  system-design.md
src/: lib.rs  main.rs  models.rs
src/api/: mod.rs  request.rs  response.rs
src/ballistic/: atmosphere.rs  bc.rs  config.rs  dataset.rs  dataset_notes.md  domain.rs  drag.rs  fixtures.rs  fixtures_dataset_notes.md  fixtures_dataset_tests.rs  integrator.rs  mod.rs  outputs.rs  physics.rs  projectile.rs  regression.rs  solver.rs  state.rs  trajectory.rs  wind.rs
src/ballistic/drag/: bc.rs  g1.rs  g7.rs  lookup.rs  mod.rs  table.rs  tests.rs
src/ballistic/fixtures/: README.md  mod.rs
src/ballistic/integrator/: euler.rs  mod.rs  rk4.rs
src/models/: mod.rs
src/sensors/: chronograph.rs  environment.rs  mod.rs  tof.rs
tests/: api_tests.rs  units_test.rs  validation.rs
tests/validation/: README.md  mod.rs
tests/validation/fixtures/: README.md  g7_baseline.json
