[package]
name = "bc-assist"
version = "0.1.0"
edition = "2021"

[lib]
name = "bc_assist"
path = "src/lib.rs"

[[bin]]
name = "bc-assist"
path = "src/main.rs"

[[bench]]
name = "trajectory"
harness = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
